welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:23: error: not found: value color
      color = (T(c+decalage)%i)
      ^Array2:24: error: not found: value color
    	setCouleurBrosse(color)
                         ^Array2:41: error: not found: value color
      color = (T(c+decalage)%i)
      ^Array2:42: error: not found: value color
    	setCouleurBrosse(color)
                         ^